Style Fixes (and more unfixed bugs)
Fixed a bug where if the editor had more lines then the screen could display, the tab bar would be pushed out of the screen and no longer be visible

This change does introduce a bug where the space the terminal takes up when open is unoccupied by the editor when its closed

--- a/src/styles/editor/cm-styles.css
+++ b/src/styles/editor/cm-styles.css
@@ -9,14 +9,16 @@ html, body {
 
 .editor{
     padding: 0;
-    flex-grow: 1;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 .cm-editor {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     overflow: auto;
 }
 
