--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -86,6 +86,8 @@ body{
   display: flex;
   flex-direction: column;
   overflow: hidden;
+  min-height: 0;
+  position: relative;
 }
 
 .app-container{
@@ -96,13 +98,11 @@ body{
 }
 
 .tab-content{
-  flex: 1;
+  flex-grow: 1;
   position: relative;
-  z-index: 1;
-}
-
-#terminal{
-  z-index: 2;
+  display: flex;
+  height: 100%;
+  min-height: 0;
 }
 
 @font-face {
