--- a/src/styles/terminal.css
+++ b/src/styles/terminal.css
@@ -1,5 +1,5 @@
 #terminal{
-    position: absolute;
+    font-family: Hack Mono;
     bottom: 0;
     width: 100%;
     height: 200px;
@@ -10,20 +10,10 @@
     transition: display 0.3s ease, opacity 0.3s ease;
     overflow-y: scroll;
     opacity: 1;
+    position: relative;
 }
 
 .hidden{
     display: none;
     opacity: 0 !important;
-}
-
-@font-face {
-    font-family: "Hack Mono";
-    src: url("../assets/fonts/hack/HackNerdFontMono-Regular.ttf");
-}
-
-@font-face {
-    font-family: "Hack Mono";
-    src: url("../assets/fonts/hack/HackNerdFontMono-Italic.ttf");
-    font-style: italic;
 }
